--- a/facedetection.ipynb
+++ b/facedetection.ipynb
@@ -1527,6 +1527,54 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0587e93",
+   "metadata": {},
+   "source": [
+    "### converting the saved tf model to tf lite model to make it deployable to tinyML board"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "667b9917",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "\n",
+    "# Load the trained model\n",
+    "model = load_model('facetracker.h5')\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "# Convert the model to the TensorFlow Lite format\n",
+    "converter = tf.lite.TFLiteConverter.from_keras_model(model)\n",
+    "tflite_model = converter.convert()\n",
+    "\n",
+    "# Save the model to a file\n",
+    "with open('facetracker.tflite', 'wb') as f:\n",
+    "    f.write(tflite_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05426e2e",
+   "metadata": {},
+   "source": [
+    "### Next part it is to convert the model into uf2 file to be flashed in to the tinyML board.\n",
+    "## this board uses some camera module (eg. arducam) to get real time testing of the model in the board."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "595916ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
